package com.group1.swp.pizzario_swp391.mapper;

import com.group1.swp.pizzario_swp391.dto.voucher.VoucherCreateDTO;
import com.group1.swp.pizzario_swp391.dto.voucher.VoucherDTO;
import com.group1.swp.pizzario_swp391.entity.Voucher;
import org.mapstruct.Mapper;
import org.mapstruct.Mapping;
import org.mapstruct.MappingTarget;

@Mapper(componentModel = "spring")
public interface VoucherMapper {
    Voucher toVoucher(VoucherCreateDTO voucherDTO);

    @Mapping(target = "timesUsed", ignore = true)
    void updateVoucher(@MappingTarget Voucher voucher, VoucherDTO voucherDTO);

}
